--- a/email.html
+++ b/email.html
@@ -190,15 +190,7 @@
                                 <h2>MLB</h2>
                             </td>
                         </tr>
-                        <tr>
-                            <td width="50%" valign="top">
-                                <p>{{ away }} @ {{ home }}</p>
-                                <p>{{ location }}</p>
-                            </td>
-                            <td width="50%" valign="top">
-                                <p>{{ time }}
-                            </td>
-                        </tr>
+                        {{gamerows}}
                     </table>
                 </div>
                 <!-- /content -->
