--- a/email.html
+++ b/email.html
@@ -184,7 +184,7 @@
 
                 <!-- content -->
                 <div class="content">
-                    <table>
+                    <table width="600">
                         <tr>
                             <td colspan="2">
                                 <h2>MLB</h2>
@@ -215,7 +215,7 @@
                                 <p>Don't like these annoying emails?
                                     <a href="mailto:barnett@echosolutionsgroup.com">
                                         <unsubscribe>Unsubscribe</unsubscribe>
-                                    </a>.
+                                    </a>
                                 </p>
                             </td>
                         </tr>
